[project]
name = "cmpe351-group4-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2025.12.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "tqdm>=4.67.3",
]
