[project]
name = "cmpe351-group4-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastparquet>=2025.12.0",
    "ipykernel>=7.2.0",
    "ipython>=9.10.0",
    "lifelines>=0.30.0",
    "matplotlib>=3.10.8",
    "matplotlib-inline>=0.2.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]
